<resources>
    <string name="app_name">Orgs</string>
    <string name="open_list">Abrir lista</string>

    <!--Form Create Products-->
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save">SAVE</string>
    <string name="home">RETURN</string>
    <string name="name">Name</string>

    <!--AppBar-->
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="content_description_favorite">Favorite</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_more">More</string>

    <!--Form Send Mail-->
    <string name="recipient">Recipient</string>
    <string name="subject">Subject</string>
    <string name="body">Body</string>
    <string name="send">SEND</string>
    <string name="load">Carregar</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="pass">Password</string>
    <string name="user">User</string>
    <string name="leaving">You´re leaving...</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="nah_just_kidding">Nah, Just Kidding</string>
    <string name="yes_log_me_out">Yes, Log Me Out</string>
</resources>