<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/user"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="name"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/user"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="name"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user" />

        <EditText
            android:id="@+id/pass"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <Button
            android:id="@+id/register"
            style="@style/buttonBorderWithoutHover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>