<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/user"
            app:layout_constraintStart_toStartOf="@+id/user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:srcCompat="@drawable/orgs_logo" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/app_name"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

        <EditText
            android:id="@+id/user"
            style="@style/EditTextForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="name"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/user"
            android:inputType="text"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="description"
            android:fontFamily="@font/comfortaa_regular"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user" />

        <Button
            android:id="@+id/login_button"
            style="@style/buttonBorderWithHover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/register_button"
            style="@style/buttonBorderWithoutHover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>