<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">

        <ImageView
            android:id="@+id/image_leaving"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@id/text_leave"
            app:layout_constraintStart_toStartOf="@id/text_leave"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_logout_24" />

        <TextView
            android:id="@+id/text_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/leaving"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_leaving" />

        <TextView
            android:id="@+id/are_you_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_leave" />

        <Button
            android:id="@+id/just_kidding"
            style="@style/btnLogoutKidding"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/nah_just_kidding"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/are_you_sure" />

        <Button
            android:id="@+id/log_me_out"
            style="@style/btnLogout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/yes_log_me_out"
            android:textColor="@color/red_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/just_kidding" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>